--- a/src/index.scss
+++ b/src/index.scss
@@ -16,262 +16,219 @@ html {
 /////////////////////// header section://////////////////////
 ////////////////////////////////////////////////////////
 #header {
-    width: 100%;
-    min-height: 100vh;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-  
-    nav {
-      background: white;
+  width: 100%;
+  min-height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  nav {
+    background: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.6rem 1.8rem;
+    z-index: 99;
+    #logo {
+      & img {
+        display: inline-block;
+        width: 250px;
+        height: auto;
+      }
+    }
+    span {
+      font-size: 1.8rem;
+    }
+    .menuItems {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 0.6rem 1.8rem;
-      z-index: 99;
-  
-      #logo {
-        & img {
-          display: inline-block;
-          width: 250px;
-          height: auto;
-        }
-      }
-  
-      span {
-        font-size: 1.8rem;
-      }
-  
-      .menuItems {
+      ul {
         display: flex;
-        justify-content: space-between;
-        align-items: center;
-  
-        ul {
-          display: flex;
-          justify-content: center;
-          margin-right: 2rem;
-          margin-bottom: 0; // to be replaced
-          li {
-            list-style: none;
-            margin: 0 1.2rem;
-            padding: 0 0.4rem;
-  
-            a {
-              font-size: 1.8rem;
-              text-decoration: none;
-              color: black;
-              font-weight: 500;
-              padding: 0.4rem 0;
-              transition: 0.3s linear;
-              position: relative;
-  
-              &::before {
-                content: "";
-                position: absolute;
-                top: 100%;
-                left: 0;
-                width: 0%;
-                height: 0.18rem;
-                background: $primaryColor;
-                transition: 0.3s linear;
-              }
-  
-              &:hover::before {
-                width: 100%;
-              }
-  
-              &:hover {
-                color: $primaryColor;
-              }
-            }
-          }
-        }
-  
-        .searchBox {
-          margin-left: 1.5rem;
-          position: relative;
-          input {
-            outline: none;
-            border: none;
-            padding: 0.8rem;
-            border-radius: 1.8rem;
-            background: $primaryColor;
-            color: white;
-  
-            &::placeholder {
-              color: white;
-            }
-          }
-  
-          i {
+        justify-content: center;
+        margin-right: 2rem;
+        li {
+          list-style: none;
+          margin: 0 1.2rem;
+          padding: 0 0.4rem;
+          a {
             font-size: 1.8rem;
-            position: absolute;
-            top: 50%;
-            right: 0;
-            transform: translateY(-50%);
-            margin-right: 1rem;
-            cursor: pointer;
-            color: white;
-          }
-        }
-  
-        .cart {
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
-          margin: 0 1rem;
-  
-          .cartSec {
-            text-align: center;
-            margin: 0 0.6rem;
-  
-            i {
-              font-size: 2rem;
+            text-decoration: none;
+            color: black;
+            font-weight: 500;
+            padding: 0.4rem 0;
+            transition: 0.3s linear;
+            position: relative;
+            &::before {
+              content: "";
+              position: absolute;
+              top: 100%;
+              left: 0;
+              width: 0%;
+              height: 0.18rem;
+              background: $primaryColor;
+              transition: 0.3s linear;
             }
-  
-            p {
-              font-size: 1rem;
-              margin-bottom: 0; //to be replaced
+            &:hover::before {
+              width: 100%;
             }
-          }
-  
-          .signUp {
-            text-align: center;
-            margin: 0 0.6rem;
-  
-            i {
-              font-size: 2rem;
-            }
-  
-            p {
-              font-size: 1rem;
-              margin-bottom: 0; //to be replaced
+            &:hover {
+              color: $primaryColor;
             }
           }
         }
       }
-    }
-  
-    &::after {
-      content: " ";
-      position: absolute;
-      top: 0;
-      right: 0;
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(rgba(0, 0, 0, 0.94), rgba(0, 0, 0, 0.78));
-      opacity: 0.35;
-      z-index: -1;
-    }
-  
-    #image {
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: -2;
-    }
-  
-    .opa {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      text-align: center;
-      padding: 2rem 1.5rem;
-  
-      h2 {
-        font-size: 7rem;
-        color: white;
-        font-weight: bold;
-        font-style: italic;
-        text-shadow: 0 0 10px black;
-      }
-  
-      small {
-        display: inline-block;
-        font-size: 2.2rem;
-        color: white;
-        text-shadow: 0 0 10px black;
-        margin-bottom: 1.2rem;
-        transform: translateY(-5px);
-        font-family: "Lato", Helvetica, Arial, sans-serif;
-      }
-  
-      .buttonWrapper {
-        a {
-          display: inline-block;
-          padding: 1.2rem 4.5rem;
-          text-decoration: none;
-          font-size: 1.4rem;
-          margin: 1.5rem 2.2rem;
+      .searchBox {
+        margin-left: 1.5rem;
+        position: relative;
+        input {
+          outline: none;
+          border: none;
+          padding: 0.8rem;
+          border-radius: 1.8rem;
           background: $primaryColor;
           color: white;
-          border-radius: 4rem;
-          border: 0.2rem solid $primaryColor;
-          font-family: "Lato", Helvetica, Arial, sans-serif;
-          transition: 0.3s linear;
-          overflow: hidden;
-  
-          &:hover {
-            opacity: 0.8;
+          &::placeholder {
+            color: white;
           }
         }
-  
-        #a2 {
-          display: inline-block;
-          padding: 1.4rem 4.5rem;
-          text-decoration: none;
-          font-size: 1.2rem;
-          font-weight: lighter;
-          margin: 1.5rem 2.2rem;
-          background: transparent;
+        .searchIcon {
+          font-size: 1.8rem;
+          position: absolute;
+          top: 50%;
+          right: 0;
+          transform: translateY(-50%);
+          margin-right: 1rem;
+          cursor: pointer;
           color: white;
-          border-radius: 4rem;
-          border: 0.2rem solid white;
-          position: relative;
-          overflow: hidden;
-  
-          &::before {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            background: $primaryColor;
-            z-index: -1;
-            width: 0%;
-            height: 100%;
-            transition: 0.3s linear;
-          }
-  
-          &::after {
-            content: "";
-            position: absolute;
-            top: 0;
-            right: 0;
-            background: $primaryColor;
-            z-index: -1;
-            width: 0%;
-            height: 100%;
-            transition: 0.3s linear;
-          }
-  
-          &:hover::before {
-            width: 50%;
-          }
-  
-          &:hover::after {
-            width: 50%;
-          }
-  
-          &:hover {
-            background: $primaryColor;
-            border: 0.2rem solid transparent;
-            opacity: 0.86;
-          }
+        }
+      }
+      .cart {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin: 0 1rem;
+        cursor: pointer;
+        p {
+          font-size: 1.1rem;
+        }
+        .cartIcon{
+          font-size: 2rem;
+        }
+        .cartSecs {
+          text-align: center;
+          margin: 5px  0.6rem 0;
         }
       }
     }
   }
+  &::after {
+    content: " ";
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0.94), rgba(0, 0, 0, 0.78));
+    opacity: 0.35;
+    z-index: -1;
+  }
+  #image {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -2;
+  }
+  .opa {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    padding: 2rem 1.5rem;
+    h2 {
+      font-size: 7rem;
+      color: white;
+      font-weight: bold;
+      font-style: italic;
+      text-shadow: 0 0 10px black;
+    }
+    small {
+      display: inline-block;
+      font-size: 2.2rem;
+      color: white;
+      text-shadow: 0 0 10px black;
+      margin-bottom: 1.2rem;
+      transform: translateY(-5px);
+      font-family: "Lato", Helvetica, Arial, sans-serif;
+    }
+    .buttonWrapper {
+      a {
+        display: inline-block;
+        padding: 1.2rem 4.5rem;
+        text-decoration: none;
+        font-size: 1.4rem;
+        margin: 1.5rem 2.2rem;
+        background: $primaryColor;
+        color: white;
+        border-radius: 4rem;
+        border: 0.2rem solid $primaryColor;
+        font-family: "Lato", Helvetica, Arial, sans-serif;
+        transition: 0.3s linear;
+        overflow: hidden;
+        &:hover {
+          opacity: 0.8;
+        }
+      }
+      #a2 {
+        display: inline-block;
+        padding: 1.4rem 4.5rem;
+        text-decoration: none;
+        font-size: 1.2rem;
+        font-weight: lighter;
+        margin: 1.5rem 2.2rem;
+        background: transparent;
+        color: white;
+        border-radius: 4rem;
+        border: 0.2rem solid white;
+        position: relative;
+        overflow: hidden;
+        &::before {
+          content: "";
+          position: absolute;
+          top: 0;
+          left: 0;
+          background: $primaryColor;
+          z-index: -1;
+          width: 0%;
+          height: 100%;
+          transition: 0.3s linear;
+        }
+
+        &::after {
+          content: "";
+          position: absolute;
+          top: 0;
+          right: 0;
+          background: $primaryColor;
+          z-index: -1;
+          width: 0%;
+          height: 100%;
+          transition: 0.3s linear;
+        }
+        &:hover::before {
+          width: 50%;
+        }
+        &:hover::after {
+          width: 50%;
+        }
+        &:hover {
+          background: $primaryColor;
+          border: 0.2rem solid transparent;
+          opacity: 0.86;
+        }
+      }
+    }
+  }
+}
