--- a/src/index.scss
+++ b/src/index.scss
@@ -12,7 +12,392 @@
 html {
   font-size: 62.5%;
 }
+////////////////////////////////////////////////////////
+///////////////////////  section:auth//////////////////////
+////////////////////////////////////////////////////////
+#authContainer {
+  .container {
+    position: relative;
+    width: 100%;
+    background-color: #fff;
+    min-height: 100vh;
+    overflow: hidden;
+  }
 
+  .forms-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+  }
+
+  .signin-signup {
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    left: 72%;
+    width: 50%;
+    transition: 1s 0.7s ease-in-out;
+    display: grid;
+    grid-template-columns: 1fr;
+    z-index: 5;
+  }
+
+  form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0rem 5rem;
+    transition: all 0.2s 0.7s;
+    overflow: hidden;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+  }
+
+  form.sign-up-form {
+    opacity: 0;
+    z-index: 1;
+  }
+
+  form.sign-in-form {
+    z-index: 2;
+  }
+
+  .title {
+    font-size: 2.2rem;
+    color: #444;
+    margin-bottom: 10px;
+  }
+
+  .input-field {
+    max-width: 380px;
+    width: 100%;
+    background-color: #f0f0f0;
+    margin: 10px 0;
+    height: 55px;
+    border-radius: 55px;
+    display: grid;
+    grid-template-columns: 15% 85%;
+    padding: 0 0.4rem;
+    position: relative;
+  }
+
+  .input-field i {
+    text-align: center;
+    line-height: 55px;
+    color: #acacac;
+    transition: 0.5s;
+    font-size: 1.1rem;
+  }
+
+  .input-field input {
+    background: none;
+    outline: none;
+    border: none;
+    line-height: 1;
+    font-weight: 600;
+    font-size: 1.1rem;
+    color: #333;
+  }
+
+  .input-field input::placeholder {
+    color: #aaa;
+    font-weight: 500;
+  }
+
+  .social-text {
+    padding: 0.7rem 0;
+    font-size: 1rem;
+  }
+
+  .social-media {
+    display: flex;
+    justify-content: center;
+  }
+
+  .social-icon {
+    height: 46px;
+    width: 46px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 0.45rem;
+    color: #333;
+    border-radius: 50%;
+    border: 1px solid #333;
+    text-decoration: none;
+    font-size: 1.1rem;
+    transition: 0.3s;
+  }
+
+  .social-icon:hover {
+    color: #ff4500;
+    border-color: #ff4500;
+  }
+
+  .btn {
+    width: 150px;
+    background-color: #ff4500;
+    border: none;
+    outline: none;
+    height: 49px;
+    border-radius: 49px;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 600;
+    margin: 10px 0;
+    cursor: pointer;
+    transition: 0.5s;
+  }
+
+  .btn:hover {
+    background-color: darkorange;
+  }
+  .panels-container {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .container:before {
+    content: "";
+    position: absolute;
+    height: 2000px;
+    width: 2000px;
+    top: -10%;
+    right: 55%;
+    transform: translateY(-50%);
+    background-image: linear-gradient(-45deg, #ff4500 0%, darkorange 100%);
+    transition: 1.8s ease-in-out;
+    border-radius: 50%;
+    z-index: 6;
+  }
+
+  .panel {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-around;
+    text-align: center;
+    z-index: 6;
+  }
+
+  .left-panel {
+    pointer-events: all;
+    padding: 3rem 30% 2rem 10%;
+  }
+
+  .right-panel {
+    pointer-events: none;
+    padding: 3rem 12% 2rem 30%;
+  }
+
+  .panel .content {
+    color: #fff;
+    transition: transform 0.9s ease-in-out;
+    transition-delay: 0.6s;
+  }
+
+  .panel h3 {
+    font-weight: 600;
+    line-height: 1;
+    font-size: 1.8rem;
+  }
+
+  .panel p {
+    font-size: 0.95rem;
+    padding: 2rem 0;
+  }
+
+  .btn.transparent {
+    margin: 0;
+    background: none;
+    border: 2px solid #fff;
+    width: 130px;
+    height: 41px;
+    font-weight: 600;
+    font-size: 0.8rem;
+  }
+
+  .right-panel .image,
+  .right-panel .content {
+    transform: translateX(800px);
+  }
+
+  /* ANIMATION */
+
+  .container.sign-up-mode:before {
+    transform: translate(100%, -50%);
+    right: 46%;
+  }
+
+  .container.sign-up-mode .left-panel .image,
+  .container.sign-up-mode .left-panel .content {
+    transform: translateX(-800px);
+  }
+
+  .container.sign-up-mode .signin-signup {
+    left: 28%;
+  }
+
+  .container.sign-up-mode form.sign-up-form {
+    opacity: 1;
+    z-index: 2;
+  }
+
+  .container.sign-up-mode form.sign-in-form {
+    opacity: 0;
+    z-index: 1;
+  }
+
+  .container.sign-up-mode .right-panel .image,
+  .container.sign-up-mode .right-panel .content {
+    transform: translateX(0%);
+  }
+
+  .container.sign-up-mode .left-panel {
+    pointer-events: none;
+  }
+
+  .container.sign-up-mode .right-panel {
+    pointer-events: all;
+  }
+
+  @media (max-width: 870px) {
+    .container {
+      min-height: 800px;
+      height: 100vh;
+    }
+    .signin-signup {
+      width: 100%;
+      top: 95%;
+      transform: translate(-50%, -100%);
+      transition: 1s 0.8s ease-in-out;
+    }
+
+    .signin-signup,
+    .container.sign-up-mode .signin-signup {
+      left: 50%;
+    }
+
+    .panels-container {
+      grid-template-columns: 1fr;
+      grid-template-rows: 1fr 2fr 1fr;
+    }
+
+    .panel {
+      flex-direction: row;
+      justify-content: space-around;
+      align-items: center;
+      padding: 2.5rem 8%;
+      grid-column: 1 / 2;
+    }
+
+    .right-panel {
+      grid-row: 3 / 4;
+    }
+
+    .left-panel {
+      grid-row: 1 / 2;
+    }
+
+    .image {
+      width: 200px;
+      transition: transform 0.9s ease-in-out;
+      transition-delay: 0.6s;
+    }
+
+    .panel .content {
+      padding-right: 15%;
+      transition: transform 0.9s ease-in-out;
+      transition-delay: 0.8s;
+    }
+
+    .panel h3 {
+      font-size: 1.2rem;
+    }
+
+    .panel p {
+      font-size: 0.7rem;
+      padding: 0.5rem 0;
+    }
+
+    .btn.transparent {
+      width: 110px;
+      height: 35px;
+      font-size: 0.7rem;
+    }
+
+    .container:before {
+      width: 1500px;
+      height: 1500px;
+      transform: translateX(-50%);
+      left: 30%;
+      bottom: 68%;
+      right: initial;
+      top: initial;
+      transition: 2s ease-in-out;
+    }
+
+    .container.sign-up-mode:before {
+      transform: translate(-50%, 100%);
+      bottom: 32%;
+      right: initial;
+    }
+
+    .container.sign-up-mode .left-panel .image,
+    .container.sign-up-mode .left-panel .content {
+      transform: translateY(-300px);
+    }
+
+    .container.sign-up-mode .right-panel .image,
+    .container.sign-up-mode .right-panel .content {
+      transform: translateY(0px);
+    }
+
+    .right-panel .image,
+    .right-panel .content {
+      transform: translateY(300px);
+    }
+
+    .container.sign-up-mode .signin-signup {
+      top: 5%;
+      transform: translate(-50%, 0);
+    }
+  }
+
+  @media (max-width: 570px) {
+    form {
+      padding: 0 1.5rem;
+    }
+
+    .image {
+      display: none;
+    }
+    .panel .content {
+      padding: 0.5rem 1rem;
+    }
+    .container {
+      padding: 1.5rem;
+    }
+
+    .container:before {
+      bottom: 72%;
+      left: 50%;
+    }
+
+    .container.sign-up-mode:before {
+      bottom: 28%;
+      left: 50%;
+    }
+  }
+}
 ////////////////////////////////////////////////////////
 /////////////////////// header section://////////////////////
 ////////////////////////////////////////////////////////
@@ -22,106 +407,6 @@ html {
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-  nav {
-    background: white;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0.6rem 1.8rem;
-    z-index: 99;
-    #logo {
-      & img {
-        display: inline-block;
-        width: 250px;
-        height: auto;
-      }
-    }
-    span {
-      font-size: 1.8rem;
-    }
-    .menuItems {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      ul {
-        display: flex;
-        justify-content: center;
-        margin-right: 2rem;
-        li {
-          list-style: none;
-          margin: 0 1.2rem;
-          padding: 0 0.4rem;
-          a {
-            font-size: 1.8rem;
-            text-decoration: none;
-            color: black;
-            font-weight: 500;
-            padding: 0.4rem 0;
-            transition: 0.3s linear;
-            position: relative;
-            &::before {
-              content: "";
-              position: absolute;
-              top: 100%;
-              left: 0;
-              width: 0%;
-              height: 0.18rem;
-              background: $primaryColor;
-              transition: 0.3s linear;
-            }
-            &:hover::before {
-              width: 100%;
-            }
-            &:hover {
-              color: $primaryColor;
-            }
-          }
-        }
-      }
-      .searchBox {
-        margin-left: 1.5rem;
-        position: relative;
-        input {
-          outline: none;
-          border: none;
-          padding: 0.8rem;
-          border-radius: 1.8rem;
-          background: $primaryColor;
-          color: white;
-          &::placeholder {
-            color: white;
-          }
-        }
-        .searchIcon {
-          font-size: 1.8rem;
-          position: absolute;
-          top: 50%;
-          right: 0;
-          transform: translateY(-50%);
-          margin-right: 1rem;
-          cursor: pointer;
-          color: white;
-        }
-      }
-      .cart {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        margin: 0 1rem;
-        cursor: pointer;
-        p {
-          font-size: 1.1rem;
-        }
-        .cartIcon {
-          font-size: 2rem;
-        }
-        .cartSecs {
-          text-align: center;
-          margin: 5px 0.6rem 0;
-        }
-      }
-    }
-  }
   &::after {
     content: " ";
     position: absolute;
@@ -229,6 +514,109 @@ html {
           border: 0.2rem solid transparent;
           opacity: 0.86;
         }
+      }
+    }
+  }
+}
+////////////////////////////////////////////////////////
+/////////////////////// navbar section://////////////////////
+////////////////////////////////////////////////////////
+nav {
+  background: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.6rem 1.8rem;
+  z-index: 99;
+  #logo {
+    & img {
+      display: inline-block;
+      width: 250px;
+      height: auto;
+    }
+  }
+  span {
+    font-size: 1.8rem;
+  }
+  .menuItems {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    ul {
+      display: flex;
+      justify-content: center;
+      margin-right: 2rem;
+      li {
+        list-style: none;
+        margin: 0 1.2rem;
+        padding: 0 0.4rem;
+        a {
+          font-size: 1.8rem;
+          text-decoration: none;
+          color: black;
+          font-weight: 500;
+          padding: 0.4rem 0;
+          transition: 0.3s linear;
+          position: relative;
+          &::before {
+            content: "";
+            position: absolute;
+            top: 100%;
+            left: 0;
+            width: 0%;
+            height: 0.18rem;
+            background: $primaryColor;
+            transition: 0.3s linear;
+          }
+          &:hover::before {
+            width: 100%;
+          }
+          &:hover {
+            color: $primaryColor;
+          }
+        }
+      }
+    }
+    .searchBox {
+      margin-left: 1.5rem;
+      position: relative;
+      input {
+        outline: none;
+        border: none;
+        padding: 0.8rem;
+        border-radius: 1.8rem;
+        background: $primaryColor;
+        color: white;
+        &::placeholder {
+          color: white;
+        }
+      }
+      .searchIcon {
+        font-size: 1.8rem;
+        position: absolute;
+        top: 50%;
+        right: 0;
+        transform: translateY(-50%);
+        margin-right: 1rem;
+        cursor: pointer;
+        color: white;
+      }
+    }
+    .cart {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin: 0 1rem;
+      cursor: pointer;
+      p {
+        font-size: 1.1rem;
+      }
+      .cartIcon {
+        font-size: 2rem;
+      }
+      .cartSecs {
+        text-align: center;
+        margin: 5px 0.6rem 0;
       }
     }
   }
@@ -438,5 +826,135 @@ html {
     padding: 4rem 1.8rem;
     padding-left: 3rem;
     margin-top: 2rem;
+  }
+}
+////////////////////////////////////////////////////////
+/////////////////////// section: home //////////////////////
+////////////////////////////////////////////////////////
+#navSecond {
+  background: $primaryColor;
+  height: 40px;
+  width: 100%;
+  padding: 5px 30px 0;
+  color: white;
+  font-size: 1.6rem;
+  font-weight: 300;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  .navItem {
+    display: flex;
+    list-style: none;
+    li {
+      margin: 0 10px;
+      cursor: pointer;
+    }
+  }
+}
+////////////////////////////////////////////////////////
+/////////////////////// section: productOne //////////////////////
+////////////////////////////////////////////////////////
+#productOne {
+  width: 250px;
+  padding: 10px;
+  text-align: center;
+  cursor: pointer;
+  img {
+    margin: 20px 0;
+    height: 150px;
+    width: 100%;
+  }
+  h3 {
+    font-size: 1.3rem;
+  }
+  .price {
+    font-size: 2rem;
+  }
+  .ratingSection {
+    display: flex;
+    justify-content: center;
+    .rating {
+      font-size: 2.1rem;
+    }
+    .count {
+      margin-top: 1px;
+      font-weight: 100 !important;
+      font-size: small;
+    }
+  }
+  .desc {
+    font-size: 1.2rem;
+  }
+}
+////////////////////////////////////////////////////////
+/////////////////////// section:productDetailsOne //////////////////////
+////////////////////////////////////////////////////////
+#productDetailsOne {
+}
+////////////////////////////////////////////////////////
+/////////////////////// section:footer //////////////////////
+////////////////////////////////////////////////////////
+#footer {
+  width: 100%;
+  height: auto;
+  padding: 8rem 10rem 4rem 4rem;
+  background: rgb(37, 37, 37);
+  .companyDetails {
+    img {
+      height: 60px;
+      width: 100%;
+      max-width: 200px;
+    }
+    p {
+      color: grey;
+      margin-top: 30px;
+      font-size: 1.5rem;
+    }
+    .socials {
+      margin-top: 20px;
+      .icon {
+        font-size: 2.5rem;
+        margin: 0 0.4rem;
+        color: white;
+        border-radius: 50%;
+        background: $primaryColor;
+        padding: 4px;
+      }
+    }
+  }
+  ul {
+    h2 {
+      margin-bottom: 1.5rem;
+      font-weight: bolder;
+      color: white;
+    }
+    li {
+      list-style: none;
+      font-size: 1.6rem;
+      color: grey;
+      & p {
+        transition: 0.2s linear;
+        &:hover {
+          color: $primaryColor;
+        }
+      }
+      a {
+        text-decoration: none;
+        line-height: 3.5rem;
+        display: inline-block;
+        transition: all 0.3s linear;
+        color: grey;
+        &:hover {
+          color: $primaryColor;
+          transform: translateX(7px);
+        }
+      }
+    }
+  }
+  #fotterBottom {
+    .copyRight {
+      color: white;
+      font-size: 1.3rem;
+    }
   }
 }
