--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,7 @@
 @import "var";
 @import "mixin";
 // font family
-@import url("https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@400;500&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -23,7 +23,6 @@ html {
     min-height: 100vh;
     overflow: hidden;
   }
-
   .forms-container {
     position: absolute;
     width: 100%;
@@ -31,7 +30,6 @@ html {
     top: 0;
     left: 0;
   }
-
   .signin-signup {
     position: absolute;
     top: 50%;
@@ -43,7 +41,6 @@ html {
     grid-template-columns: 1fr;
     z-index: 5;
   }
-
   form {
     display: flex;
     align-items: center;
@@ -55,22 +52,18 @@ html {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
   }
-
   form.sign-up-form {
     opacity: 0;
     z-index: 1;
   }
-
   form.sign-in-form {
     z-index: 2;
   }
-
   .title {
-    font-size: 2.2rem;
+    font-size: 3.8rem;
     color: #444;
     margin-bottom: 10px;
   }
-
   .input-field {
     max-width: 380px;
     width: 100%;
@@ -83,40 +76,30 @@ html {
     padding: 0 0.4rem;
     position: relative;
   }
-
-  .input-field i {
-    text-align: center;
-    line-height: 55px;
+  .input-field .icon {
+    margin: auto;
     color: #acacac;
     transition: 0.5s;
-    font-size: 1.1rem;
+    font-size: 2.5rem;
   }
-
   .input-field input {
     background: none;
     outline: none;
     border: none;
     line-height: 1;
-    font-weight: 600;
-    font-size: 1.1rem;
+    font-weight: 400;
+    font-size: 1.7rem;
     color: #333;
   }
-
   .input-field input::placeholder {
     color: #aaa;
-    font-weight: 500;
+    font-weight: 400;
   }
-
-  .social-text {
-    padding: 0.7rem 0;
-    font-size: 1rem;
-  }
-
   .social-media {
     display: flex;
     justify-content: center;
+    margin-top: 10px;
   }
-
   .social-icon {
     height: 46px;
     width: 46px;
@@ -128,15 +111,12 @@ html {
     border-radius: 50%;
     border: 1px solid #333;
     text-decoration: none;
-    font-size: 1.1rem;
     transition: 0.3s;
   }
-
   .social-icon:hover {
     color: #ff4500;
     border-color: #ff4500;
   }
-
   .btn {
     width: 150px;
     background-color: #ff4500;
@@ -151,7 +131,6 @@ html {
     cursor: pointer;
     transition: 0.5s;
   }
-
   .btn:hover {
     background-color: darkorange;
   }
@@ -203,15 +182,14 @@ html {
     transition: transform 0.9s ease-in-out;
     transition-delay: 0.6s;
   }
-
   .panel h3 {
     font-weight: 600;
     line-height: 1;
-    font-size: 1.8rem;
+    font-size: 3.5rem;
   }
 
   .panel p {
-    font-size: 0.95rem;
+    font-size: 1.55rem;
     padding: 2rem 0;
   }
 
@@ -222,7 +200,7 @@ html {
     width: 130px;
     height: 41px;
     font-weight: 600;
-    font-size: 0.8rem;
+    font-size: 1.2rem;
   }
 
   .right-panel .image,
@@ -890,6 +868,81 @@ nav {
 /////////////////////// section:productDetailsOne //////////////////////
 ////////////////////////////////////////////////////////
 #productDetailsOne {
+  padding: 0px 50px 10px;
+  .offer_banner_one {
+    height: 50px;
+    width: 50%;
+    max-width: 1000px;
+    display: block;
+    margin:  0 auto 20px;
+  }
+  .short_image_section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+    .short_image {
+    height: 45px;
+    width: 45px;
+    padding: 2px;
+    margin-top: 9px;
+    border-radius: 4px;
+    box-shadow: 1px 1px 6px 1px $primaryColor;
+    cursor: pointer;
+  }
+  }
+  
+  .large_image {
+    width: 100%;
+    max-height: 400px;
+    padding-top: 30px;
+  }
+  .detail_title {
+    font-size: 2.5rem;
+  }
+  .brand_name {
+    font-size: 1.5rem;
+    margin: 5px 0;
+  }
+  .description{
+    font-size: 1.45rem;
+  }
+  .detail_price{
+    margin: 5px 0;
+    font-size: 3rem;
+    font-weight: 500;
+  }
+  .category{
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin: 5px 0;
+  }
+  .ratingSection {
+    display: flex;
+    .rating {
+      font-size: 2rem;
+    }
+    .count {
+      margin-top: 3px;
+      font-weight: 100 !important;
+      font-size: small;
+    }
+  }
+  .stock{
+    font-size: 2rem;
+  }
+  .share_box {
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    .share_icon {
+      font-size: 2.2rem;
+      cursor: pointer;
+    }
+  }
 }
 ////////////////////////////////////////////////////////
 /////////////////////// section:footer //////////////////////
