customize section going on

--- a/src/index.scss
+++ b/src/index.scss
@@ -429,6 +429,7 @@ html {
     }
     .buttonWrapper {
       a {
+        cursor: pointer;
         display: inline-block;
         padding: 1.2rem 4.5rem;
         text-decoration: none;
@@ -499,7 +500,7 @@ html {
 ////////////////////////////////////////////////////////
 /////////////////////// navbar section://////////////////////
 ////////////////////////////////////////////////////////
-nav {
+#navBar {
   background: white;
   display: flex;
   justify-content: space-between;
@@ -661,7 +662,7 @@ nav {
 ////////////////////////////////////////////////////////
 #third {
   padding: 0 50px;
-  .heading{
+  .heading {
     text-align: center;
     font-size: 3.3rem;
     margin-bottom: 60px;
@@ -734,6 +735,7 @@ nav {
 /////////////////////// section: six //////////////////////
 ////////////////////////////////////////////////////////
 #sixth {
+  margin: 50px 0;
   padding: 5rem 20px;
   #blackHeading {
     color: black;
@@ -789,37 +791,37 @@ nav {
 ////////////////////////////////////////////////////////
 /////////////////////// section: seven //////////////////////
 ////////////////////////////////////////////////////////
-#seven{
+#seven {
   margin: 30px 0 80px;
   padding: 0px 50px 0px 50px;
   position: relative;
-  .title{
+  .title {
     text-align: center;
     font-size: 2.8rem;
     font-weight: 500;
-    span{
+    span {
       font-weight: 600;
     }
   }
-  .grid{
+  .grid {
     margin-bottom: 30px;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     margin-left: 30px;
-    img{
+    img {
       margin-left: 50px;
     }
-    h1{
+    h1 {
       font-size: 2rem;
       font-weight: 500;
     }
-    p{
+    p {
       font-size: 1.3rem;
     }
   }
-  .button{
+  .button {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
@@ -891,24 +893,24 @@ nav {
 ////////////////////////////////////////////////////////
 /////////////////////// section: productOne //////////////////////
 ////////////////////////////////////////////////////////
-#landing_product{
+#landing_product {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
   margin: 10px 0;
-  img{
+  img {
     cursor: pointer;
     width: 200px;
     height: 190px;
   }
-  .title{
-  cursor: pointer;
+  .title {
+    cursor: pointer;
     font-size: 1.6rem;
     font-weight: 500;
   }
-  .detail_price{
+  .detail_price {
     cursor: pointer;
     font-size: 1.6rem;
   }
@@ -1011,6 +1013,13 @@ nav {
       background: $primaryColor;
     }
   }
+  .customize_button {
+    margin-top: 10px;
+    border: 1px solid silver;
+    width: 100%;
+    text-transform: none;
+    font-size: 1.7rem;
+  }
 }
 ////////////////////////////////////////////////////////
 /////////////////////// section: cart //////////////////////
@@ -1019,6 +1028,7 @@ nav {
   margin-top: 30px;
   padding: 0 60px;
   .cart_top {
+    margin-bottom: 30px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -1082,6 +1092,41 @@ nav {
     border: 1px dotted silver;
     text-align: center;
     color: silver;
+    .empty {
+      font-size: 8rem;
+      color: $primaryColor;
+    }
+    .shop_button {
+      margin-top: 15px;
+      color: white;
+      background: $primaryColor;
+      border-radius: 3px;
+      padding: 10px 30px;
+    }
+  }
+  .security {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: row;
+    color: gray;
+    .secure_text {
+      font-size: 1.5rem;
+      font-weight: 600;
+    }
+    .icon {
+      font-size: 2.5rem;
+    }
+  }
+  .cart_bottom {
+    margin-top: 100px;
+    display: flex;
+    justify-content: space-between;
+    p {
+      font-size: 1.5rem;
+    }
+    span {
+      color: $primaryColor;
+    }
   }
 }
 ////////////////////////////////////////////////////////
@@ -1137,6 +1182,181 @@ nav {
     font-size: 1.6rem;
     margin-top: 5px;
     box-shadow: 1px 1px 1px silver;
+  }
+}
+////////////////////////////////////////////////////////
+/////////////////////// section:all_drawer //////////////////////
+////////////////////////////////////////////////////////
+#all_drawer {
+  width: 300px;
+  padding-top: -10px;
+  .profile {
+    cursor: pointer;
+    padding: 20px 0 20px 10px;
+    display: flex;
+    background: $primaryColor;
+    color: white;
+    .text {
+      margin-top: 3px;
+      font-size: 2.1rem;
+    }
+    .icon {
+      margin-top: 5px;
+      color: white;
+      font-size: 3rem;
+      margin-right: 5px;
+    }
+  }
+  .title {
+    font-size: 1.8rem;
+    padding-left: 40px;
+    font-weight: 600;
+  }
+  .item {
+    padding-left: 40px;
+    font-size: 1.6rem;
+    font-weight: 400;
+  }
+  .flag {
+    height: 20px;
+  }
+}
+
+////////////////////////////////////////////////////////
+/////////////////////// section:profile //////////////////////
+////////////////////////////////////////////////////////
+#profile_section {
+  padding: 40px;
+  .avatar_sec {
+    padding: 10px;
+    display: flex;
+    .avatar {
+      font-size: 3rem;
+      color: $primaryColor;
+      margin-top: 5px;
+    }
+    p {
+      margin-left: 10px;
+      font-size: 1.3rem;
+      span {
+        font-size: 1.5rem;
+        font-weight: 600;
+      }
+    }
+  }
+  .menu_section {
+    margin-top: 30px;
+    padding: 8px 4px;
+    .title {
+      font-size: 1.6rem;
+    }
+    .item {
+      font-size: 1.4rem;
+    }
+    .icon {
+      color: $primaryColor;
+    }
+  }
+  .detail_panel {
+    padding: 20px;
+    h1 {
+      margin-top: 5px;
+    }
+    p {
+      margin-top: 10px;
+      font-size: 1.5rem;
+    }
+    .faq {
+      h1 {
+        font-size: 1.8rem;
+      }
+    }
+  }
+}
+
+////////////////////////////////////////////////////////
+/////////////////////// section:customize //////////////////////
+////////////////////////////////////////////////////////
+#customize {
+  padding: 20px 50px;
+  .customize_box {
+    padding: 10px;
+    .image {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      .large_img {
+        margin-top: 50px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 70%;
+        height: 400px;
+      }
+      .small {
+        .samll_img {
+          margin-left: 10px;
+          height: 45px;
+          width: 45px;
+          padding: 2px;
+          margin-top: 9px;
+          border-radius: 4px;
+          box-shadow: 1px 1px 6px 1px $primaryColor;
+          cursor: pointer;
+        }
+      }
+    }
+  }
+  .back {
+    cursor: pointer;
+    font-size: 1.3rem;
+    font-weight: 600;
+    display: flex;
+    .icon {
+      font-size: 2rem;
+    }
+  }
+  .main_edit {
+    padding: 15px 0 0 30px;
+    .category {
+      font-size: 1.4rem;
+      font-weight: 600;
+      color: gray;
+    }
+    .title {
+      margin: 5px 0;
+      font-size: 2rem;
+      font-weight: 600;
+    }
+    .ratingSection{
+      display: flex;
+      .rating{
+        height: 20px;
+      }
+      font-size: 1.4rem;
+      p{
+        margin-top: -3px;
+      }
+    }
+    .head{
+      margin: 7px 0;
+      font-size: 1.5rem;
+      font-weight: 600;
+    }
+    .qulity_box{
+      strong{
+        font-size: 1.2rem;
+      }
+    }
+    .request_btn{
+      width: 100%;
+      margin: 10px 0;
+      font-size: 1.8rem;
+      background: $primaryColor;
+      color: white;
+      text-transform: none;
+    }
   }
 }
 ////////////////////////////////////////////////////////
@@ -1237,5 +1457,22 @@ nav {
         }
       }
     }
+  }
+}
+
+////////////////////////////////////////////////////////
+/////////////////////// section:footer inside //////////////////////
+////////////////////////////////////////////////////////
+.footer_inner {
+  // margin-top: 100px;
+  margin: 100px 50px 30px;
+  display: flex;
+  justify-content: space-between;
+  p {
+    font-size: 1.5rem;
+  }
+  span {
+    color: $primaryColor;
+    cursor: pointer;
   }
 }
